<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="510dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/buscaPedido"
                    android:layout_width="186dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="29dp"
                    android:gravity=""
                    android:hint="Pedido"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonBuscar"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="28dp"
                    android:background="@color/colorBlue"
                    android:baselineAligned="false"
                    android:text="Buscar"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.333"
                    app:layout_constraintStart_toEndOf="@+id/buscaPedido"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">


                <TextView
                    android:id="@+id/nomeCliente"
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/clienteNome"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textCliente"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nomeRep"
                    android:layout_width="246dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/clienteNome"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.057"
                    app:layout_constraintStart_toEndOf="@+id/textCliente5"
                    app:layout_constraintTop_toBottomOf="@+id/dataEmissao" />

                <TextView
                    android:id="@+id/dataEmissao"
                    android:layout_width="94dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/clienteNome"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.005"
                    app:layout_constraintStart_toEndOf="@+id/textCliente2"
                    app:layout_constraintTop_toBottomOf="@+id/nomeCidade" />

                <TextView
                    android:id="@+id/valorPedido"
                    android:layout_width="94dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/clienteNome"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.017"
                    app:layout_constraintStart_toEndOf="@+id/valor"
                    app:layout_constraintTop_toBottomOf="@+id/nomeRep" />

                <TextView
                    android:id="@+id/nomeCidade"
                    android:layout_width="162dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/clienteNome"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/textCliente3"
                    app:layout_constraintTop_toBottomOf="@+id/nomeCliente" />

                <TextView
                    android:id="@+id/sigUfs"
                    android:layout_width="31dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/clienteNome"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textCliente4"
                    app:layout_constraintTop_toBottomOf="@+id/nomeCliente" />

                <TextView
                    android:id="@+id/textCliente"
                    android:layout_width="55dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/cliente"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textCliente2"
                    android:layout_width="55dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/emissao"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCliente3" />

                <TextView
                    android:id="@+id/textCliente5"
                    android:layout_width="55dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/representante"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCliente2" />

                <TextView
                    android:id="@+id/valor"
                    android:layout_width="55dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/valor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCliente5" />

                <TextView
                    android:id="@+id/textCliente3"
                    android:layout_width="55dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/cidade"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCliente" />

                <TextView
                    android:id="@+id/textCliente4"
                    android:layout_width="23dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/uf"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/nomeCidade"
                    app:layout_constraintTop_toBottomOf="@+id/nomeCliente" />
            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>